# mental-work

./: .gitignore  compile_commands.json
cpp/: CMakeLists.txt  Makefile
cpp/binsearch/: binsearch.cpp  main.cpp  tests.cpp
cpp/hello_world/: Makefile  main
go/: go.mod
go/binsearch/: README.md  base.go  base_test.go
go/cmd/demo/: main.go
go/monostack/: problems.go  problems_test.go
go/sliding_window/: README.md  code.go  code_test.go
